; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/cgame/extr_cg_servercmds.c_CG_LoadVoiceChats.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/cgame/extr_cg_servercmds.c_CG_LoadVoiceChats.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [22 x i8] c"scripts/female1.voice\00", align 1
@voiceChatLists = common dso_local global i32* null, align 8
@MAX_VOICECHATS = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [22 x i8] c"scripts/female2.voice\00", align 1
@.str.2 = private unnamed_addr constant [22 x i8] c"scripts/female3.voice\00", align 1
@.str.3 = private unnamed_addr constant [20 x i8] c"scripts/male1.voice\00", align 1
@.str.4 = private unnamed_addr constant [20 x i8] c"scripts/male2.voice\00", align 1
@.str.5 = private unnamed_addr constant [20 x i8] c"scripts/male3.voice\00", align 1
@.str.6 = private unnamed_addr constant [20 x i8] c"scripts/male4.voice\00", align 1
@.str.7 = private unnamed_addr constant [20 x i8] c"scripts/male5.voice\00", align 1
@.str.8 = private unnamed_addr constant [29 x i8] c"voice chat memory size = %d\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @CG_LoadVoiceChats() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 (...) @trap_MemoryRemaining()
  store i32 %2, i32* %1, align 4
  %3 = load i32*, i32** @voiceChatLists, align 8
  %4 = getelementptr inbounds i32, i32* %3, i64 0
  %5 = load i32, i32* @MAX_VOICECHATS, align 4
  %6 = call i32 @CG_ParseVoiceChats(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i32* %4, i32 %5)
  %7 = load i32*, i32** @voiceChatLists, align 8
  %8 = getelementptr inbounds i32, i32* %7, i64 1
  %9 = load i32, i32* @MAX_VOICECHATS, align 4
  %10 = call i32 @CG_ParseVoiceChats(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.1, i64 0, i64 0), i32* %8, i32 %9)
  %11 = load i32*, i32** @voiceChatLists, align 8
  %12 = getelementptr inbounds i32, i32* %11, i64 2
  %13 = load i32, i32* @MAX_VOICECHATS, align 4
  %14 = call i32 @CG_ParseVoiceChats(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.2, i64 0, i64 0), i32* %12, i32 %13)
  %15 = load i32*, i32** @voiceChatLists, align 8
  %16 = getelementptr inbounds i32, i32* %15, i64 3
  %17 = load i32, i32* @MAX_VOICECHATS, align 4
  %18 = call i32 @CG_ParseVoiceChats(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.3, i64 0, i64 0), i32* %16, i32 %17)
  %19 = load i32*, i32** @voiceChatLists, align 8
  %20 = getelementptr inbounds i32, i32* %19, i64 4
  %21 = load i32, i32* @MAX_VOICECHATS, align 4
  %22 = call i32 @CG_ParseVoiceChats(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.4, i64 0, i64 0), i32* %20, i32 %21)
  %23 = load i32*, i32** @voiceChatLists, align 8
  %24 = getelementptr inbounds i32, i32* %23, i64 5
  %25 = load i32, i32* @MAX_VOICECHATS, align 4
  %26 = call i32 @CG_ParseVoiceChats(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.5, i64 0, i64 0), i32* %24, i32 %25)
  %27 = load i32*, i32** @voiceChatLists, align 8
  %28 = getelementptr inbounds i32, i32* %27, i64 6
  %29 = load i32, i32* @MAX_VOICECHATS, align 4
  %30 = call i32 @CG_ParseVoiceChats(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.6, i64 0, i64 0), i32* %28, i32 %29)
  %31 = load i32*, i32** @voiceChatLists, align 8
  %32 = getelementptr inbounds i32, i32* %31, i64 7
  %33 = load i32, i32* @MAX_VOICECHATS, align 4
  %34 = call i32 @CG_ParseVoiceChats(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.7, i64 0, i64 0), i32* %32, i32 %33)
  %35 = load i32, i32* %1, align 4
  %36 = call i32 (...) @trap_MemoryRemaining()
  %37 = sub nsw i32 %35, %36
  %38 = call i32 @CG_Printf(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.8, i64 0, i64 0), i32 %37)
  ret void
}

declare dso_local i32 @trap_MemoryRemaining(...) #1

declare dso_local i32 @CG_ParseVoiceChats(i8*, i32*, i32) #1

declare dso_local i32 @CG_Printf(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
